# fastfort

./: CMakeLists.txt  Makefile  README.md  hello_world
cmd/: main.c
domain/edge/mcu/peripherals/: pe.h
domain/edge/mcu/peripherals/cam/: cam.c  cam.h
domain/edge/mcu/peripherals/cam/devices/: ov2640.h  ov7670.h
domain/edge/mcu/peripherals/display/: display.c  display.h
domain/edge/mcu/peripherals/display/devices/: ili9341.h  ssd1306.h
domain/edge/mcu/peripherals/imu/: imu.c  imu.h
domain/edge/mcu/peripherals/imu/devices/: bno055.h  mpu6050.h
domain/edge/mcu/peripherals/input/: input.c  input.h
domain/edge/mcu/peripherals/input/devices/: btn_generic.h  ky040.h
domain/edge/mcu/peripherals/led/: led.c  led.h
domain/edge/mcu/peripherals/led/devices/: apa102.h  ws2812.h
domain/edge/mcu/peripherals/motor/: motor.c  motor.h
domain/edge/mcu/peripherals/motor/devices/: l298n.h  tb6612.h
domain/edge/mcu/peripherals/nvm/: nvm.h  nvm_eeprom.c  nvm_file.c  nvm_littlefs.c  nvm_nvs.c  nvm_sim.c  nvm_stm32.c
domain/edge/mcu/peripherals/nvm/devices/: at24c32.h  w25q64.h
domain/edge/mcu/peripherals/photo/: photo.c  photo.h
domain/edge/mcu/peripherals/photo/devices/: bh1750.h  gl5528.h
domain/edge/mcu/peripherals/pres/: pres.c  pres.h
domain/edge/mcu/peripherals/pres/devices/: bmp280.h  ms5611.h
domain/edge/mcu/peripherals/relay/: relay.c  relay.h
domain/edge/mcu/peripherals/relay/devices/: ky019.h  srd_05vdc.h
domain/edge/mcu/peripherals/servo/: servo.c  servo.h
domain/edge/mcu/peripherals/servo/devices/: mg996r.h  sg90.h
domain/edge/mcu/peripherals/step/: step.c  step.h
domain/edge/mcu/peripherals/step/devices/: a4988.h  drv8825.h
domain/edge/mcu/peripherals/tmp/: tmp.c  tmp.h
domain/edge/mcu/peripherals/tmp/devices/: tmp102.h  tmp36.h
domain/edge/mcu/protocols/: pr.c  pr.h
domain/edge/mcu/protocols/bus/can/: can.h  can_arduino.c  can_esp32.c  can_rp2040.c  can_sim.c  can_stm32.c
domain/edge/mcu/protocols/bus/i2c/: i2c.h  i2c_arduino.c  (+4 more)
lib/: PLAN.md
lib/bds/: bds.c  bds.h  bds_types.h
lib/bfi/: bfi.c  bfi.h  bfi_macho_config.h
lib/bg2d/: bg2d.c  bg2d.h
lib/bgu/: bgu.c  bgu.h
lib/bmu/: bmu.c  bmu.h
lib/bpr/: bpr.c  bpr.h
lib/bps/: bps.c  bps.h
lib/bsp/: bsp.c  bsp.h  bsp_std.md  bsp_types.h
lib/ds/: ds.c  ds.h  ds_types.h
lib/err/: err.c  err.h
lib/mm/: mm.c  mm.h
lib/mo/: mo.c  mo.h
lib/res/: res.h
sys/: README.md
sys/network/btr_sockets/: btr_sockets.c  btr_sockets.h  btr_sockets_configs.h
sys/network/sockets/: sockets.c  sockets.h  sockets.md
sys/network/sockets_b/: client.c  config.h  server.c  sockets.h
(+12 files in other folders)
